# geom

./: README.md  pyproject.toml
python_scripts/blender/: cube.py
src/geom/utils/blender/: __init__.py  camera.py  light.py  mesh.py  remove.py
