[project]
name = "geom"
version = "0.1.1"
dependencies = [
    bpy
]

[project.urls]
Repository = "https://github.com/Arktetra/geom.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722", "E731", "F722"]
